Fixed footer overflow

--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ footer{
     margin:0 auto;
     position:absolute;
     bottom:0px;
-    width: 90%;
+    width: 80%;
     height:12px;
     font-size: 10px;
     font-weight: bold;
